rs/demos/proc_macros/darling_example/tests/ui-fail/wrong_shape.stderr
error: Unsupported shape `enum`. Expected struct with named fields.
 --> tests/ui-fail/wrong_shape.rs:4:10
  |
4 | #[derive(Config)]
  |          ^^^^^^
  |
  = note: this error originates in the derive macro `Config` (in Nightly builds, run with -Z macro-backtrace for more info)
