rs/demos/proc_macros/darling_example/tests/ui-fail/wrong_shape.rs
use darling_example::Config;

// Enums are not supported by this derive; should fail with a helpful error
#[derive(Config)]
enum BadShape {
    A { x: i32 },
}

fn main() {}
